syntax = "proto3";
package proto;
option go_package=".;proto";

import "proto/computation-msgs.proto";

// RPC service at a cloud algo that performs the necessary computation.
service CloudAlgo {
    // Performs the appropriate computation at the host algo and returns the result.
    rpc Compute (ComputeRequest) returns (ComputeResponse) {}

}