syntax = "proto3";
package proto;
option go_package=".;proto";

// A generic JSON encoded request
message ComputeRequest {
    string req = 1;
    string username = 2;
    repeated int64 sites = 3;
}

// A generic JSON encoded response
message ComputeResponse {
    string response = 1;
    repeated int64 unavailable_sites = 2;
}

// A request for a map computation
message MapRequest {
    int64 id = 1;
    string req = 2;
    repeated int64 sites = 3;
}

// A response from a map computation
message MapResponse {
    string response = 1;
}

// The map responses returned by the algorithms in different sites.
message MapResponses {
    repeated MapResponse responses = 1;
    repeated int64 unavailable_sites = 2;
}